# valida-compiler

./: Jenkinsfile  README.md
clang/include/clang/AST/: ASTContext.h
clang/include/clang/Basic/: DiagnosticCommonKinds.td
clang/lib/AST/: ASTContext.cpp  RecordLayoutBuilder.cpp
clang/lib/Basic/: CMakeLists.txt  Targets.cpp  Targets.h  Version.cpp
clang/lib/Basic/Targets/: AArch64.cpp  ARM.cpp  TriCore.cpp  TriCore.h
clang/lib/CodeGen/: TargetInfo.cpp
clang/lib/Driver/: CMakeLists.txt  Driver.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  HighTec.cpp  HighTec.h
clang/lib/Frontend/: InitHeaderSearch.cpp
clang/rlm_libs/x64_w/: rlm1233.lib
clang/test/CodeGen/: tricore-abi.c  tricore-inline-asm.c  x86-atomic-long_double.c
clang/test/CodeGenCXX/: pod-member-memcpys.cpp
clang/test/Driver/: frame-pointer.c  hightec.c  hightec.cpp  tricore-cpus-invalid.c  tricore-cpus.c  tricore-derivatives.c  tricore-features.c  tricore-toolchain.c
clang/test/Frontend/: tricore-derivatives-missing.c  tricore-target-cpu-invalid.c
clang/test/Layout/: tricore-layout.c  tricore-layout.cpp
clang/test/Preprocessor/: init.c  tricore-defines-builtins-xfail.c  tricore-defines.c
clang/test/Sema/: tricore-asm.c
clang/tools/driver/: CMakeLists.txt  LicenseManagerBase.cpp  LicenseManagerBase.h  driver.cpp  license.h
clang/unittests/DirectoryWatcher/: CMakeLists.txt
compiler-rt/cmake/: builtin-config-ix.cmake
compiler-rt/lib/builtins/: CMakeLists.txt  int_util.c
libcxx/include/: CMakeLists.txt  __config  __locale  math.h
libcxx/include/support/dinkum/: xlocale.h
libcxx/include/support/hightec/: locale_htc.h
libcxx/src/: CMakeLists.txt  locale.cpp  random.cpp
libcxx/src/include/: config_elast.h
libcxx/src/support/dinkum/: support.cpp
libcxx/test/support/: platform_support.h
libunwind/: CMakeLists.txt
lld/Common/: Version.cpp
llvm/include/llvm/: module.modulemap
llvm/include/llvm/ADT/: Triple.h
llvm/include/llvm/BinaryFormat/: ELF.h
llvm/include/llvm/CodeGen/: Analysis.h
llvm/include/llvm/IR/: IRBuilder.h
llvm/include/llvm/Object/: ELFObjectFile.h
llvm/include/llvm/TargetParser/: Triple.h
llvm/lib/CodeGen/: Analysis.cpp
llvm/lib/Object/: ELF.cpp
llvm/lib/ObjectYAML/: ELFYAML.cpp
llvm/lib/Support/: Triple.cpp
llvm/lib/TargetParser/: Triple.cpp
llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp
llvm/test/CodeGen/Delendum/: lowering.ll  return.ll
llvm/test/CodeGen/TriCore/: HDP-1144-01.ll  HDP-1144-02.ll  HDP-1144-03.ll  HDP-1144-04.ll  analyze-branch.mir  callee-saved-regs.mir  copy-phys-reg.mir  copy-pseudo-register-invalid.mir  elim-frame-index-dbg-value.mir  elim-frame-index-xfail.mir  elim-frame-index.mir  emergency-spill-slot.mir  expand-mov-imm-dead.mir  expand-mov-imm.mir  frame-info.ll  inline-asm.mir  jump-table-placement.mir  lower-external-symbol.mir  lower-global-value.mir  lower-jump-table-pic-tc16x-compressed.mir  lower-jump-table-pic-tc16x.mir  lower-jump-table.mir  lower-machinebasicblock.mir  lower-regmask.mir  prologue-epilogue-invalid-stack-size.mir  prologue-epilogue-remarks.mir  prologue-epilogue.mir  psw-forces-psw_c-spill.mir  psw-marked-reserved.mir  stack-slots.mir  trivial-compressions.mir  verify-imms.mir  xfail-analyze-branch.ll  xfail-frame-info.ll  xfail-omit-frame-pointer.ll  xfail-prologue-epilogue-stack-realign.mir
llvm/test/MC/TriCore/: absolute-value-absolute-difference.s  accumulating-bit-operations-valid.s  accumulating-compare-valid.s  addition-and-subtraction-valid.s  address-arithmetic-valid.s  address-comparison-valid.s  bit-field-extract-insert-valid.s  cache-tc1.8-valid.s  cache-valid.s  cfi-regs-invalid.s  cfi-regs-valid.s  check-instructions-valid.s  common-fixups-and-relocations-invalid.s  common-fixups-and-relocations-valid.s  common-fixups-symbol-invalid.s  common-fixups-symbol-valid.s  compare-with-shift-valid.s  compressed-instruction-valid.s  conditional-arithmetic-instructions-valid.s  conditional-branch-valid.s  context-loading-and-storing-valid.s  count-leading-zeros-valid.s  csfr-names-invalid.s  csfr-names.s  data-directives-invalid.s  data-directives-valid.s  division-valid.s  elf-flags.s  elf-header.s  fast-call-valid.s  fast-call-xfail-valid.s  floating-point-conversion-valid.s  floating-point-operations-valid.s  fpu-arithmetic-tc1.8-valid.s  fpu-conversion-tc1.8-valid.s  load-store-basic-data-type-valid.s  logical-valid.s  loop-valid.s  min-max-sature.s  (+26 more)
llvm/test/Other/: opt-O2-pipeline.ll  opt-O3-pipeline.ll  opt-Os-pipeline.ll
llvm/tools/llvm-objcopy/: CopyConfig.cpp
llvm/tools/llvm-readobj/: ELFDumper.cpp
llvm/unittests/ADT/: TripleTest.cpp
llvm/utils/TableGen/: RISCVCompressInstEmitter.cpp
llvm/utils/UpdateTestChecks/: asm.py
(+198 files in other folders)
